--- a/client/admin/index.html
+++ b/client/admin/index.html
@@ -124,17 +124,17 @@
                             <i class="fa fa-files-o"></i>
                             <span>Quản lý Sinh Viên</span>
                             <span class="pull-right-container">
-                                <span class="label label-primary pull-right">4</span>
+                                <i class="fa fa-angle-left pull-right"></i>
                             </span>
                         </a>
                         <ul class="treeview-menu">
                             <li>
                                 <a ui-sref="student">
-                                    <i class="fa fa-circle-o"></i> Danh sách sinh viên</a>
+                                    <i class="fa fa-circle-o text-aqua"></i> Danh sách sinh viên</a>
                             </li>
                             <li>
                                 <a ui-sref="block">
-                                    <i class="fa fa-circle-o"></i> Sinh viên bị BLOCK </a>
+                                    <i class="fa fa-circle-o text-red"></i> Sinh viên bị BLOCK </a>
                             </li>
                         </ul>
                     </li>
@@ -144,13 +144,13 @@
                             <i class="fa fa-files-o"></i>
                             <span>Quản lý Bài đăng</span>
                             <span class="pull-right-container">
-                                <span class="label label-primary pull-right">4</span>
+                                <i class="fa fa-angle-left pull-right"></i>
                             </span>
                         </a>
                         <ul class="treeview-menu">
                             <li>
                                 <a ui-sref="post">
-                                    <i class="fa fa-circle-o"></i> Danh sách bài đăng</a>
+                                    <i class="fa fa-circle-o text-aqua"></i> Danh sách bài đăng</a>
                             </li>
                         </ul>
                     </li>
