--- a/client/company/index.html
+++ b/client/company/index.html
@@ -211,7 +211,7 @@
     <!-- END PAGE CONTAINER -->
     <!-- MESSAGE BOX-->
     <div class="message-box animated fadeIn" data-sound="alert" id="mb-signout">
-        <div class="mb-container">
+        <div class="mb-container" ng-controller="LogoutController">
             <div class="mb-middle">
                 <div class="mb-title">
                     <span class="fa fa-sign-out"></span> Log
@@ -222,7 +222,7 @@
                 </div>
                 <div class="mb-footer">
                     <div class="pull-right">
-                        <a href="pages-login.html" class="btn btn-success btn-lg">Yes</a>
+                        <button ng-click="logout()" class="btn btn-success btn-lg mb-control-close">Yes</button>
                         <button class="btn btn-default btn-lg mb-control-close">No</button>
                     </div>
                 </div>
