--- a/client/index.html
+++ b/client/index.html
@@ -56,6 +56,7 @@
   <script src="./js/controllers/company/home.js"></script>
   <script src="./js/controllers/home/post.js"></script>
   <script src="./js/controllers/home/home.js"></script>
+  <script src="./js/controllers/home/search.js"></script>  
   <script src="./js/controllers/company/list.js"></script>
 </body>
 
