admin full done

--- a/client/admin/index.html
+++ b/client/admin/index.html
@@ -156,7 +156,7 @@
                     </li>
 
                     <li>
-                        <a href="https://adminlte.io/docs">
+                        <a href="https://drive.google.com/open?id=1V2GNiPJXDbqTr-AZPoj2SqTXti0u6VPp">
                             <i class="fa fa-book"></i>
                             <span>Documentation</span>
                         </a>
@@ -203,15 +203,22 @@
        immediately after the control sidebar -->
         <div class="control-sidebar-bg"></div>
     </div>
-
+    
     <script src="../vendor/sweetaleart/sweetalert.min.js"></script>
     <script src="../vendor/jquery/dist/jquery.js"></script>
+    <!-- jQuery 3 -->
+    <script src="vendor/jquery/dist/jquery.min.js"></script>
+    <!-- jQuery UI 1.11.4 -->
+    <script src="vendor/jquery-ui/jquery-ui.min.js"></script>
+    <!-- DataTables -->
+    <script src="../vendor/datatables.net/js/jquery.dataTables.min.js"></script>
+    <script src="../vendor/datatables.net-bs/js/dataTables.bootstrap.min.js"></script>
     <script src="../vendor/bootstrap/dist/js/bootstrap.js"></script>
     <script src="../vendor/angular/angular.js"></script>
+    <script src="admin/views/vendor/angular-datatables.min.js"></script>
     <script src="../vendor/angular-resource/angular-resource.js"></script>
     <script src="../vendor/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="../vendor/angular-ui-router/release/stateEvents.js"></script>
-    <script src="admin/views/vendor/angular-datatables.min.js"></script>
     <script src="../vendor/angular-sanitize/angular-sanitize.js"></script>
     <script type="text/javascript" src="../vendor/ng-file-upload/ng-file-upload.min.js"></script>
     <script type="text/javascript" src="../vendor/ng-file-upload/ng-file-upload-shim.min.js"></script>
@@ -235,19 +242,12 @@
     <script src="admin/controllers/studentBlock.js"></script>
 
     <!-- Library -->
-    <!-- jQuery 3 -->
-    <script src="../vendor/jquery/dist/jquery.min.js"></script>
-    <!-- jQuery UI 1.11.4 -->
-    <script src="../vendor/jquery-ui/jquery-ui.min.js"></script>
     <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
     <script>
         $.widget.bridge('uibutton', $.ui.button);
     </script>
     <!-- Bootstrap 3.3.7 -->
     <script src="../vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-    <!-- DataTables -->
-    <script src="../vendor/datatables.net/js/jquery.dataTables.min.js"></script>
-    <script src="../vendor/datatables.net-bs/js/dataTables.bootstrap.min.js"></script>
     <!-- Morris.js charts -->
     <script src="../vendor/raphael/raphael.min.js"></script>
     <script src="../vendor/morris.js/morris.min.js"></script>
